Data hiding with different roles Displaying a list of orders

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,4 +35,22 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>dashBoard</servlet-name>
+        <servlet-class>ru.innopolis.stc13.controller.DashBoardServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>dashBoard</servlet-name>
+        <url-pattern>/inner/dashBoard</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>InnerFilter</filter-name>
+        <filter-class>ru.innopolis.stc13.controller.filters.InnerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>InnerFilter</filter-name>
+        <url-pattern>/inner/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
