--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,5 @@ repositories {
 dependencies {
     compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
     compile 'javax.servlet:javax.servlet-api:3.1.0'
+    compile group: 'jstl', name: 'jstl', version: '1.2'
 }
